# WriteDigitsIntoWords

./: .gitignore  CMakeLists.txt  README.md
WriteDigitsIntoWords/: Utils.cpp  Utils.h  WordTransformer.cpp  WordTransformer.h  WriteDigitsIntoWords.sln  WriteDigitsIntoWords.vcxproj  WriteDigitsIntoWords.vcxproj.filters  main.cpp
WriteDigitsIntoWordsTest/: BasicTests.cpp  PhraseTests.cpp  WriteDigitsIntoWordsTest.vcxproj  pch.cpp  test.cpp
